--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,226 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background-color: whitesmoke;
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
+      /*Header styling starts here*/
+header {
+  background-color: grey;
+  height: 80px;
+  width: auto;
+  padding: 0 16px;
+  border-bottom: 1px solid black;
+  display: flex;
+  align-items: center;
+  }
+  h1 {
+    font-size: 48px;
+  }
+  .logo {
+    display: none;
+  }
+  .hamburger {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-right: 24px;
+  }
+  .hamburger div {
+    width: 30px;
+    height: 5px;
+    background-color: black;
+  }
+  nav {
+    display: none;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  img:hover {
+    opacity: 0.5;
+  }
+  p {
+    padding: 5px;
+  }
+        /* Big-news styling starts here*/
+.big-news {
+  height: auto; 
+}
+  h2 {
+  margin: 15px;
+  text-align: center;
+}
+.big-news img {
+  width: 100%;
+  height: 400px;
+  border: 0;
+}
+        /* Other-news styling starts here*/
+.other-news {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: auto;
+  margin: 20px;
+  padding: 15px;
+}
+h3 {
+  margin: 15px;
+  text-align: center;
+}
+.other-news img {
+  display: block;
+  width: 80%;
+  height: auto;
+  margin: auto; 
+  border: 0; 
+}
+.article {
+  max-width: 650px; 
+  width: auto;
+  height: auto; 
+  padding: 15px;
+}
+        /*styling for footer*/
+footer {
+  background-color: grey;
+  font-size: 12px;
+}
+footer p {
+  text-align: center;
+  margin: 0;
+}
+        /* @media tablet*/
+@media screen and (min-width: 668px) { 
+  header {
+    height: 180px;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    }
+    .logo {
+      display: inline;
+    }
+    h1 {
+      font-size: 75px;
+    }
+    .hamburger {
+      display: none;
+    }
+    nav {
+      display: inline;
+    }
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;  
+    }
+    li {
+      text-align: center; 
+    }
+    li a {
+      display: block;
+      width: 80px;
+      background-color: grey;
+      color: black;
+      padding: 5px 16px;
+      text-decoration: none;
+    }
+  li a:link {
+    text-decoration: none;
+  }
+  a:visited {
+    text-decoration: none;
+  }
+  li a:hover {
+   background-color: lightgrey;
+  }
+  h2 {
+    font-size: 46px;
+    margin: 15px;
+    text-align: center;
+  }
+  .big-news img {
+    width: 90%;
+    height: 500px;
+    display: block;
+    margin: auto;
+    border: 0;
+    border-radius: 8px;
+  }
+  .other-news {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    height: auto;
+    width: auto;
+    margin: 20px;
+    padding: 15px;
+  }
+  .article {
+    max-width: 1024px;
+    box-sizing: border-box;
+    width: 40%;
+    height: auto; 
+    padding: 15px;
+  }
+  .other-news img {
+    display: block;
+    width: 80%;
+    height: 200px;
+    border-radius: 8%;
+    margin: auto; 
+    border: 0;
+    }
+}
+      /*@media desktop*/
+@media screen and (min-width: 1024px) {
+  header {
+    height: 250px;
+    padding: 15px; 
+  }
+  h2 { 
+    font-size: 65px;
+  }  
+  li a {
+    font-size: 20px;
+    width: 100px;
+    padding: 10px 16px;
+  }
+  .big-news {
+    overflow: auto;
+    height: auto; 
+  }
+  .big-news img {
+    width: 50%;
+    margin: 20px;
+    border: 0;
+    float: left;
+    clear: left;
+  }
+  .big-news p {
+    font-size: 24px;
+    letter-spacing: 2px;
+    padding: 130px 10px;
+  }
+  .other-news {
+    padding: 30px 15px;
+  }
+  .article {
+    width: 20%;
+  } 
+  .article p {
+    text-align: justify;
+    padding: 5px 15px;
+  }
+  footer {
+    padding: 15px 0;
+    font-size: 16px; 
+  }          
+}
+
