--- a/code/style.css
+++ b/code/style.css
@@ -1,33 +1,58 @@
 html {
-  background: #0025ff;
+  background: rgb(4, 48, 33);
   color: #fff;
+  background-image: url("https://images.unsplash.com/photo-1511207538754-e8555f2bc187");
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  color: black;
+  font-size: 18px;
+  width: 95%;
+  max-width: 1280px;
 }
 
 h1 {
   font-size: 48px;
+  line-height: 1em;
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 36px;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(0, 255, 0);
+}
+
+/* underlines headlines on hover */
+a:hover > h1, a:hover > h2 {
+  text-decoration: underline;
+}
+
+.read-more {
+  font-size: 14px;
+  text-align: right;
+  margin-right: 20px;
+  margin-bottom: 0px;
 }
 
 
 /* HEADER */
+
 header {
-  margin: 0 auto;
-  width: 90%;
-  background-color: black;
 }
 
 header ul {
   display: flex;
+  align-items:center;
   list-style: none;
   padding: 0; /* Removes padding left */
   margin: 0; /* Removes margin top bottom */
@@ -38,61 +63,149 @@ header li {
   display: none;
 }
 
+header a {
+  padding: 20px; /* gives the header links larger click area */
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 3px;
+}
+
 .logo {
+  align-items: center;
   display: block;
 }
 
-section {
+.logo span {
+  display: none;
+  margin-left: 10px;
+}
+
+.logo img {
+  vertical-align: middle;
+  height: 40px;
+  filter: brightness(20); /* a hack to make the logo white */
+}
+
+/* makes logo green on hover */
+header a:hover > img {
+  filter: brightness(5) sepia(1) hue-rotate(70deg) saturate(5);
+}
+
+
+
+
+
+/* NEWS */
+
+.big-news, .news-card {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  align-items: center;
-  width: 90%;
-  margin: 0 auto;
+  align-items: left;
 }
+
+.big-news {
+  box-sizing: border-box; /* Makes the padding subtract from width */
+  padding: 10px;
+}
+
+.big-news article, .news-card article {
+  position: relative; /* act as anchor point for <p>, absolute */
+  width: 100%;
+  height: auto;
+  box-sizing: border-box; /* Makes the padding subtract from width */
+  padding: 10px;
+}
+
+.big-news figure, .news-card figure {
+  position: relative; /* act as anchor point for img, absolute */
+  width: 100%;
+  padding-top: 66.66%; /* Gives the image container the aspect ratio 2:3 */
+  margin: 0;
+  box-shadow: 7px 7px 0px -2px rgba(0,0,0,0.5); /* Shadow on figure instead of article due to padding */
+}
+
+/* Hover article card change position + big news figure */ 
+/* .big-news article:hover > h1 {
+  text-decoration: underline;
+} */
+
+/* Hover article card change position + big news figure */ 
+.news-card article:hover, .big-news figure:hover {
+  transform: translateY(-1px) translateX(-1px);
+}
+
+/* Hover article card change shadow on figure + big news figure*/ 
+.news-card article:hover > figure, .big-news figure:hover {
+  box-shadow: 8px 8px 0px -2px rgba(0,0,0,0.5);
+}
+
+.news-card article:active, .big-news figure:active {
+  transform: translateY(1px) translateX(1px);
+}
+
+.news-card article:active > figure, .big-news figure:active {
+  box-shadow: 6px 6px 0px -2px rgba(0,0,0,0.5);
+}
+
+.big-news img, .news-card img {
+  position: absolute; /* To position the img ontop of the figure padding */
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;  /* Crops the image to fit the ratio */
+
+  
+}
+
 
 /* BIG NEWS */
 
-
-.big-news {
-  background-color: darkgoldenrod;
+.big-news h1 {
+  margin: 0 10px;
 }
 
-.big-news article {
-  background-color:firebrick;
-  width: 100%;
-  height: 300px;
-  margin: 0;
+.big-news-text {
+  margin: 10px;
 }
-
-.big-news figure {
-  margin: 0;
-  background-color: brown;
-  width: 100%;
-  height: 300px;
-}
-
 
 /* NEWS CARDS */
 
-
-.news-card {
-  background-color: rebeccapurple;
+.news-card h2 {
+  position:  absolute;
+  height: fit-content;
+  margin: 0;
+  width: 80%;
+  top: 50%;
+  left: 50%;
+  bottom: 0;
+  right: 0;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
-.news-card article {
-  background-color: aquamarine;
-  height: 200px;
-  width: 100%;
-  margin: 0;
+
+/* FOOTER */
+
+footer {
+  text-align: center;
+  margin: 60px auto 30px auto;
+}
+
+.social {
+  height: 45px;
+  bottom: 10px;
 }
 
 /* TABLET */
 
 
-@media (min-width: 600px) {
+@media (min-width: 768px) {
   header ul {
-    justify-content: center;
+    justify-content: space-evenly;
   }
 
   header li {
@@ -101,19 +214,37 @@ section {
   
   .big-news, .news-card {
     flex-direction: row;
+    align-items: stretch; /* makes the height of the article same as figure */
+  }
+
+  .big-news {
+    flex-wrap: nowrap; /* stops the text from changing row when min-width hit */
   }
   
   .big-news figure {
-    width: 40%;
+    width: 65%;
+    padding-top: 43.33%; /* 60% of 2/3 to keep ratio*/ 
   }
 
   .big-news article {
-    width: 60%;
+    width: 35%;
+    min-width: 260px;
+    /* max-width: 420px; */
+    /* margin-top: 5%; */
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-evenly; not supported in Edge */
   }
 
   .news-card article {
     width: 50%;
   }
+
+  h2 {
+    font-size: 30px;
+  }
+  
+
 
 }
 
@@ -121,15 +252,27 @@ section {
 /* DESKTOP */
 
 
-@media (min-width: 900px) {
+@media (min-width: 1024px) {
 
   .logo {
     margin-right: auto;
     order: -1;
   }
 
+  .logo span {
+    display: inline;
+  }
+
   .news-card article {
     width: 25%;
+  }
+
+  .news-card figure {
+    padding-top: 100%;
+  }
+
+  h2 {
+    font-size: 24px;
   }
 
 
