--- a/code/style.css
+++ b/code/style.css
@@ -195,11 +195,12 @@ main {
   float: left;
   width: 25%;
   padding: 20px;
+  padding-bottom: 100px;
 }
 
 .row:after {
   content: "";
-  display: table;
+  display: flex;
   clear: both;
 }
 
@@ -240,28 +241,48 @@ main {
 
 /****************** footer style ***********************/
 
-footer {
-  position: absolute;
+
+#footer {
+  background: #ffab62;
+  padding: 1em;
   width: 100%;
-  height: 80px; 
-  background-color: rgba(150, 126, 46, 0.42);
+  top: 200%;
+  position: absolute;
 }
 
 footer h4 {
   text-align: center;
-  font-family: 'Courier New', Courier, monospace;
-  text-transform: uppercase;
 }
 
+footer p {
+  text-align: center;
+}
 
-@media screen and (max-width: 600px) {
-  .footer  {
-    position: absolute;
-    bottom: 0;
-    height: 100px;
+footer p:hover {
+  color: #ffab62;
+}
+
+@media screen and (max-width: 992px) {
+  #footer {
+    padding: 1em;
     width: 100%;
+    top: 295%;
+    position: absolute;
   }
 }
+
+@media screen and (max-width: 600px) {
+  #footer {
+    padding: 1em;
+    width: 100%;
+    top: 525%;
+    position: absolute;
+  }
+}
+
+
+
+
 
 
 
