--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,11 @@ header {
   padding: 2%;
 }
 
-.header-textcontainer {
+.header-home a:hover {
+  opacity: 0.5;
+}
+
+.header-text-container {
   color: white;
   width: 70%;
   margin: 0%;
@@ -46,14 +50,8 @@ section {
 
 /* Big News */
 
-h2 {
-  font-family: 'Raleway', sans-serif;
-  color: #e4195d;
-  margin: 20px 10px;
-}
-
 .big-news {
-  margin: 0% 0% 5% 0%;
+  padding: 0% 0% 5% 0%;
 }
 
 .big-image { 
@@ -62,6 +60,7 @@ h2 {
 
 .big-image img {
   max-width: 100%;
+  object-fit: cover;
 }
 
 .image-source {
@@ -73,12 +72,38 @@ h2 {
   font-size: 10px;
 }
 
+.big-news-text a {
+  text-decoration: none;
+}
+
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  color: #e4195d;
+  margin: 10px; 
+  font-size: 30px;
+}
+
+h2:hover {
+  font-weight: normal;
+  text-decoration: underline overline;
+}
+
 .big-news p {
   margin: 0px 10px; 
+  font-family: 'Raleway', sans-serif;
 }
 
 .big-news a {
   margin: 0px 10px; 
+}
+
+.read-more {
+  color: #e4195d;
+  font-family: 'Raleway', sans-serif;
+}
+
+.read-more:hover {
+  font-weight: bold;
 }
 
 /* Other news */
@@ -96,6 +121,12 @@ article {
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 0px 1px 10px 1px #290310;
+  transition: transform .2s;
+}
+
+article:hover {
+  transform: scale(1.1);
 }
 
 .other-news img {
@@ -127,17 +158,9 @@ footer {
   border-width: thick;
 }
 
-.footer-container {
+.footer-links {
   display: flex;
   justify-content: center;
-}
-
-ul {
-  padding: 0px;
-}
-
-.footer-links {
-  list-style-type: none;
   font-family: 'Poiret One', cursive;
   color: white;
   font-weight: bold;
@@ -146,32 +169,50 @@ ul {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  max-width: 50%
+  padding: 0% 23%;
 }
 
-.footer-links a {
+.footer-links a:link {
   text-decoration: none;
   padding: 0px 10px;
+  color: white;
+}
+
+.footer-links a:visited {
+  color: white;
+}
+
+.footer-links a:hover {
+  font-weight: normal;
 }
 
 h4 {
   margin: 30px 0px 0px 0px;
   font-size: 20px;
+  font-weight: normal;
 }
 
 button {
-  background-color: #e4195c;
-  color: white;
-  font-family: 'Poiret One', cursive;
-  font-weight: bold;
+  background-color: #e4195d;
   padding: 15px;
   text-align: center;
-  text-decoration: none;
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
   border: 2px solid white;
+  transition: transform .2s;
+}
+
+button a {
+  text-decoration: none;
+  color: white;
+  font-family: 'Poiret One', cursive;
+  font-weight: bold;
+}
+
+button:hover {
+  transform: scale(1.2);
 }
 
 .footer-subscribe {
@@ -181,15 +222,16 @@ button {
   align-items: center;
 }
 
-footer img {
-  max-width: 20%; 
-  margin: 50px;
-}
-.footer-links a:visited {
-  color: rgba(255, 255, 255);
-  opacity: 0.5;
+.footer-subscribe p {
+  margin: 20px 20px 0px 20px;
 }
 
+.logo {
+  max-width: 20%;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  align-self: flex-end;   
+}
 
 /***** Styling dependent on screen size ******/
 
@@ -197,6 +239,19 @@ footer img {
   .header-text { display: none; }
   .navbar { display: none; }
   .large-screen { display: none; }
+  span {display: none;}
+}
+
+@media (min-width: 424px) {
+  .footer-links {
+    padding: 0% 30%;
+  }
+}
+
+@media (min-width: 522px) {
+  .footer-links {
+    padding: 0% 33%;
+  }
 }
 
 @media (min-width:668px) {
@@ -208,7 +263,7 @@ footer img {
     align-items: flex-start;
   }
 
-  .header-textcontainer {
+  .header-text-container {
     width: 100%;
     padding: 0%;
   }
@@ -227,7 +282,6 @@ footer img {
 
   .navbar {
     overflow: hidden;
-    list-style-type: none;
     border-top: 5px dotted white;
     border-width: thick;
     display: flex;
@@ -236,24 +290,36 @@ footer img {
     align-items: center;
   }
 
-  .navbar a {
+  .navbar-navbar:link {
     color: white;
     padding: 10px;
     text-decoration: none;
     font-size: 20px;
   }
 
+ .navbar-navbar:visited {
+    color: white;
+  }
+
+  .navbar-navbar:hover {
+    background-color: ivory;
+    color: #e4195d;
+    font-weight: bold;
+  }
+
+  .navbar-home:hover {
+    background-color: #e4195d;
+  }
+
   .navbar-home img {
     height: 60px;
     width: 60px;
+    margin-top: 5px;
   }
-  
-  /* .navbar a:hover {
-    color: #3c3e4b;
-  } */
-  
-  .navbar a.active {
-    font-weight: bold;
+
+  .navbar-home img:hover {
+    background-color: #e4195d;
+    opacity: 0.5;
   }
 
   .small-screen { display: none; }
@@ -266,7 +332,11 @@ footer img {
     flex-grow: 1;
     min-width: 40%;
   }
-e
+
+  .big-image img {
+    height: 415px;
+  }
+
   .big-news-text {
     flex-grow: 2;
   }
@@ -276,14 +346,43 @@ e
     flex-wrap: wrap;
   }
   
-    .article {
+  .article {
     max-width: 40%;
   }
 
   .footer-links {
-    max-width: 30%;
+    flex-direction: row;
+    justify-content: flex-end;
+    max-width: 100%;
+    padding: 0;
   }
 
+  .login {
+    order: 3;
+  }
+
+  .contact {
+    order: 2;
+  }
+
+  .signup {
+    order: 4;
+  }
+
+  .footer-subscribe p {
+    margin: 20px 20px 50px 20px;
+    font-size: 20px;
+    align-self: flex-start;
+  }
+
+  .footer-subscribe p img {
+    width: 100px;
+    height: 50px
+  }
+  
+  .logo {
+    display: none;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -314,9 +413,14 @@ e
 
   .navbar-home { display: none; }
 
-  .navbar a {
+  .navbar-navbar:link {
     font-size: 25px;
     padding: 20px;
+  }
+
+  .big-news {
+    margin: 2% 15%;
+    padding: 0%;
   }
   
   .other-news {
@@ -327,12 +431,17 @@ e
     max-width: 20%;
   }
 
-  .footer-links a {
-    font-size: 25px;
+  h4 {
+    margin: 0;
   }
-
+  
   .footer-links {
-    max-width: 20%;
+    justify-content: flex-start;
+    margin-left: 30px;
+    margin-top: 10px;
   }
 
+  .footer-subscribe p {
+    align-self: flex-end;
+  }
 }
