--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,170 @@
 html {
-  background: #0025ff;
-  color: #fff;
+ background-color: rgb(248, 240, 230);
+  color: black;
+}
+
+/*HEADER STYLING*/
+.header-container {
+  border-bottom: double 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+/*Text Styling*/
+
+h1 {
+  font-family: 'Playfair Display', serif;
+  font-size: 60px;
+  text-align: center;
+  font-variant: small-caps;
+  margin: 0px;
+}
+
+h2 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding: 10px;
+  margin: 2px;
+  font-size: 40px;
+}
+
+h3 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding: 10px;
+}
+
+p {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding: 10px;
+  text-align: justify;
+  margin: 0px;
+}
+
+.the-first-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+.hamburger {
+  display: flex;
+  width: 20px;
+  height: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background-color: black;
+}
+
+.nav {
+  display: none;
+}
+
+.nav{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-variant: small-caps;
+  text-align: justify;
+  font-size: 20px; 
+}
+
+/*BIG NEWS STYLING*/
+
+.big-news {
+  border: solid 1px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  width: 100%;
+  max-width: 1100px;
+ }
+
+.text {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+ }
+
+.big-news img {
+  width: 100%;
+  flex-grow: 1;
+}
+ 
+ /*SMALL NEWS STYLING (cards)*/
+.small-news-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1100px; 
+  margin: 0 auto;
+  }
+
+ .small-news-card {
+  border: solid 1px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  margin-bottom: 10px;
+  margin: 0 auto;
+  padding: 2px;
+   }
+
+ .small-news-card a {
+margin-bottom: 10px;
+ }
+
+ .small-news-card img {
+  width: 100%;
+  flex-grow: 1
+}
+
+.the-last-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  border-top: double;
+  margin-top: 50px;
+}
+
+ .the-last-container img {
+   width: 50px;
+ } 
+
+
+/*MEDIA QUERIES*/
+
+@media (min-width: 667px) {
+ 
+ .nav{
+   display: inline-block;
+ }
+
+  .hamburger{
+    display: none;
+  }
+  .big-news {
+    flex-direction: row;
+    align-items: center;
+   }
+  
+   .small-news-container {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-around;
+   }
+
+  .big-news img {
+    width: 100%;
+  }
 }
