--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,5 @@
 html {
-  background: rgb(4, 48, 33);
+  background: rgb(4, 48, 33); /* backup background color */
   color: #fff;
   background-image: url("https://images.unsplash.com/photo-1511207538754-e8555f2bc187");
   background-size: cover;
@@ -7,18 +7,20 @@ html {
 }
 
 body {
-  margin: 0 auto;
+  margin: 0 auto; /* centers the body */
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
   width: 95%;
   max-width: 1280px;
 }
 
+/* Big news headline */
 h1 {
   font-size: 48px;
   line-height: 1em;
 }
 
+/* News-cards headline */
 h2 {
   font-size: 36px;
 }
@@ -32,7 +34,7 @@ a:hover {
   color: rgb(0, 255, 0);
 }
 
-/* underlines headlines on hover */
+/* underlines child (>) headlines only on hover */
 a:hover > h1, a:hover > h2 {
   text-decoration: underline;
 }
@@ -54,13 +56,13 @@ header ul {
   display: flex;
   align-items:center;
   list-style: none;
-  padding: 0; /* Removes padding left */
-  margin: 0; /* Removes margin top bottom */
+  padding: 0; /* Removes default padding left */
+  margin: 0; /* Removes default margin top and bottom */
 }
 
 header li {
   margin: 20px;
-  display: none;
+  display: none; /* Hides links on mobile */
 }
 
 header a {
@@ -75,15 +77,17 @@ header a {
   display: block;
 }
 
+/* titel */
 .logo span {
-  display: none;
+  display: none; 
   margin-left: 10px;
 }
 
+/* logo */
 .logo img {
   vertical-align: middle;
   height: 40px;
-  filter: brightness(20); /* a hack to make the logo white */
+  filter: brightness(20); /* hack to make the logo white */
 }
 
 /* makes logo green on hover */
@@ -105,7 +109,7 @@ header a:hover > img {
 }
 
 .big-news {
-  box-sizing: border-box; /* Makes the padding subtract from width */
+  box-sizing: border-box; /* Padding subtract from width */
   padding: 10px;
 }
 
@@ -113,39 +117,35 @@ header a:hover > img {
   position: relative; /* act as anchor point for <p>, absolute */
   width: 100%;
   height: auto;
-  box-sizing: border-box; /* Makes the padding subtract from width */
+  box-sizing: border-box; /* Padding subtract from width */
   padding: 10px;
 }
 
 .big-news figure, .news-card figure {
   position: relative; /* act as anchor point for img, absolute */
   width: 100%;
-  padding-top: 66.66%; /* Gives the image container the aspect ratio 2:3 */
+  padding-top: 66.66%; /* Hack to give image container fixed aspect ratio 2:3 */
   margin: 0;
-  box-shadow: 7px 7px 0px -2px rgba(0,0,0,0.5); /* Shadow on figure instead of article due to padding */
+  box-shadow: 6px 6px 0px -2px rgba(0,0,0,0.5); /* Shadow on news-card figure, not article due to padding */
 }
 
-/* Hover article card change position + big news figure */ 
-/* .big-news article:hover > h1 {
-  text-decoration: underline;
-} */
 
-/* Hover article card change position + big news figure */ 
-.news-card article:hover, .big-news figure:hover {
-  transform: translateY(-1px) translateX(-1px);
+/* Hover changes position of images */ 
+.big-news figure:hover, .news-card article:hover {
+  transform: translateY(-2px) translateX(-2px);
 }
 
-/* Hover article card change shadow on figure + big news figure*/ 
-.news-card article:hover > figure, .big-news figure:hover {
+/* Hover changes shadow of images */ 
+.big-news figure:hover, .news-card article:hover > figure { /* article hover effects the child, figure */
   box-shadow: 8px 8px 0px -2px rgba(0,0,0,0.5);
 }
 
-.news-card article:active, .big-news figure:active {
+.big-news figure:active, .news-card article:active {
   transform: translateY(1px) translateX(1px);
 }
 
-.news-card article:active > figure, .big-news figure:active {
-  box-shadow: 6px 6px 0px -2px rgba(0,0,0,0.5);
+.big-news figure:active, .news-card article:active > figure {
+  box-shadow: 5px 5px 0px -2px rgba(0,0,0,0.5);
 }
 
 .big-news img, .news-card img {
@@ -179,11 +179,11 @@ header a:hover > img {
   height: fit-content;
   margin: 0;
   width: 80%;
-  top: 50%;
-  left: 50%;
+  top: 50%; /* centers the textblock */
+  left: 50%; /* centers the textblock */
   bottom: 0;
   right: 0;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); /* centers the textblock */
   text-align: center;
 }
 
@@ -195,42 +195,42 @@ footer {
   margin: 60px auto 30px auto;
 }
 
-.social {
-  height: 45px;
-  bottom: 10px;
-}
 
 /* TABLET */
 
-
 @media (min-width: 768px) {
+
   header ul {
     justify-content: space-evenly;
   }
 
+  /* displays links */
   header li {
     display: block;
   }
   
   .big-news, .news-card {
     flex-direction: row;
-    align-items: stretch; /* makes the height of the article same as figure */
   }
 
+  /* makes height of text and figure the same */
+  /* .big-news {
+    align-items: stretch; 
+  } */
+
+  /* stops the text from changing row when min-width is hit */
   .big-news {
-    flex-wrap: nowrap; /* stops the text from changing row when min-width hit */
+    flex-wrap: nowrap; 
   }
   
   .big-news figure {
     width: 65%;
-    padding-top: 43.33%; /* 60% of 2/3 to keep ratio*/ 
+    padding-top: 43.33%; /* 65% of 2/3 to keep ratio */ 
   }
 
   .big-news article {
     width: 35%;
     min-width: 260px;
-    /* max-width: 420px; */
-    /* margin-top: 5%; */
     /* display: flex;
     flex-direction: column;
     justify-content: space-evenly; not supported in Edge */
@@ -243,30 +243,34 @@ footer {
   h2 {
     font-size: 30px;
   }
-  
-
 
 }
 
 
 /* DESKTOP */
 
-
 @media (min-width: 1024px) {
 
+  /* Logo to the left and auto margin pushes the other content to the right*/
   .logo {
     margin-right: auto;
     order: -1;
   }
 
+  /* Displays logo text */
   .logo span {
     display: inline;
+  }
+
+  .big-news article {
+    margin-top: 5%;
   }
 
   .news-card article {
     width: 25%;
   }
 
+  /* Square images */
   .news-card figure {
     padding-top: 100%;
   }
@@ -274,7 +278,6 @@ footer {
   h2 {
     font-size: 24px;
   }
-
 
 }
 
