--- a/code/style.css
+++ b/code/style.css
@@ -49,9 +49,11 @@ p {
   background-color: #f3f3ee;
   height: 150px;
   display: flex;
+  flex-direction: row;
   align-items: center;
   box-sizing: border-box;
-  margin-top: 20px;
+  justify-content: center;
+
 
 }
 
@@ -80,41 +82,54 @@ nav a {
 /*** BIG NEWS ***/
 
 .big-news .container {
-
-  padding: 100px 16px;
   display: flex;
-  flex-direction: column;
-  margin-left: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
 
 }
 
 .big-news img {
-  width: 80%;
+  width: 90%;
   box-shadow: 10px 10px 5px grey;
 }
 
 .big-news div {
-  text-align: left;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+
 
 }
 
 /*** OTHER NEWS ***/
 
-.news-grid {
+.news-grid .container {
   color: #000;
-  text-align: center;
-  padding: 24px;
+  display: flex;
+
 }
 
-.news-card .container {
+.news-card {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  padding: 30px;
 }
 
 .news-card img {
   margin-top: 15px;
   margin-bottom: 15px;
   box-shadow: 10px 10px 5px grey;
+  width: 100%;
+
 }
+
+
+
+
+
 
 
 
@@ -124,13 +139,16 @@ nav a {
 
 .footer .container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
   align-items: center;
-  justify-content: end;
+  justify-content: center;
+
+
 }
 
 .footer img {
   margin: 10px;
+  hover:
 }
 
 
@@ -155,29 +173,31 @@ nav a {
 
   .big-news .container {
     padding: 30px 16px;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    flex-direction: row;
   }
 
-  .big-news div {
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-
-
-  }
 
   .big-news img {
-    width: 90%;
-    align-items: center;
+    width: 50%;
+    display: inline-block;
+
   }
 
+  .news-grid {
+    text-align: left;
+    width: 100%;
 
-  .news-card .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 30%;
-    flex-grow: 1;
-    margin-left: 120px;
+  }
+
+  .news-card {
+    flex-wrap: nowrap;
+    flex-direction: row;
+    width: 48%;
+
+
+
   }
 
   .news-card img {
