--- a/code/style.css
+++ b/code/style.css
@@ -116,6 +116,7 @@ nav a {
   justify-content: center;
   flex-grow: 1;
   padding: 30px;
+  width: 100%;
 }
 
 .news-card img {
@@ -148,7 +149,7 @@ nav a {
 
 .footer img {
   margin: 10px;
-  hover:
+
 }
 
 
@@ -176,6 +177,8 @@ nav a {
     justify-content: space-between;
     flex-wrap: nowrap;
     flex-direction: row;
+
+
   }
 
 
@@ -185,24 +188,29 @@ nav a {
 
   }
 
-  .news-grid {
-    text-align: left;
-    width: 100%;
-
-  }
-
   .news-card {
-    flex-wrap: nowrap;
+    display: flex;
     flex-direction: row;
+    justify-content: flex-start;
+
     width: 48%;
 
 
 
   }
 
-  .news-card img {
-    width: 90%;
+  .news-card h3 {
+    font-size: 15px;
+    padding: 0px 5px;
   }
+
+  .news-card p {
+    font-size: 10px;
+    padding: 0px 5px;
+
+  }
+
+
 
   .footer {
     padding-left: 36px;
