--- a/code/style.css
+++ b/code/style.css
@@ -3,20 +3,17 @@ body {
   color: rgb(5, 5, 5);
   font-family: Helvetica -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
+  margin-block-end: 0em;
 }
 
 h2 {
-  font-size: 30px;
   line-height: 32px;
-  margin-top: 10px;
-  margin-bottom: 5px;
   letter-spacing: .1em;
 
 }
 
 h3 {
-  font-size: 20px;
-  margin-top: 10px;
+  margin: 10px 20px;
   letter-spacing: .1em;
   margin-block-end: 0em;
 }
@@ -29,16 +26,10 @@ h4 {
 
 
 p {
-  font-size: 15px;
-  margin-top: 2px;
+  margin: 10px 40px;
   letter-spacing: .1em;
 }
 
-.container {
-  width: 100%;
-  max-width: 1100px;
-  margin: 0 auto;
-}
 
 
 
@@ -46,20 +37,20 @@ p {
 
 .header {
   width: 100%;
+  max-width: 1100px;
   background-color: #f3f3ee;
   height: 150px;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  box-sizing: border-box;
   justify-content: center;
+  margin-top: 20px;
+  margin: 0 auto;
 
 
 }
 
 .header img {
-  width: 70%;
-  padding: 10px;
+  width: 100%;
 
 }
 
@@ -67,90 +58,67 @@ nav {
   display: none;
 }
 
-nav a {
+nav {
   color: rgb(49, 52, 88);
   text-decoration: none;
   padding: 20px;
   font-family: "Helvetica Neue", Arial, sans-serif;
   color: white;
   text-shadow: 2px 2px 4px #000000;
-
-
-
 }
+
 
 /*** BIG NEWS ***/
 
-.big-news .container {
+.big-news {
+  width: 100%;
+  max-width: 1100px;
+  margin: 30px 5px;
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-
 }
 
 .big-news img {
-  width: 90%;
+  width: 100%;
   box-shadow: 10px 10px 5px grey;
 }
 
-.big-news div {
-  text-align: center;
-  display: flex;
-  flex-wrap: wrap;
-
-
-}
-
-/*** OTHER NEWS ***/
-
-.news-grid .container {
-  color: #000;
-  display: flex;
-
-}
+/*** SMALLER NEWS  ***/
 
 .news-card {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 1;
-  padding: 30px;
   width: 100%;
+  max-width: 1100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .news-card img {
+  width: 90%;
   margin-top: 15px;
   margin-bottom: 15px;
   box-shadow: 10px 10px 5px grey;
-  width: 100%;
-
 }
-
-
-
-
-
-
-
 
 
 /*** FOOTER ***/
 
-
-.footer .container {
+.footer {
+  width: 80%;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-
-
+  margin: 40px;
 }
 
 .footer img {
   margin: 10px;
-
 }
+
+
 
 
 
@@ -159,110 +127,57 @@ nav a {
 /*** MEDIA QUERIES ***/
 
 @media (min-width: 667px) {
-  header {
+  .header {
     justify-content: space-between;
+    margin: 20px;
+  }
+
+  .header img {
+    width: 70%;
+    flex-grow: 1;
   }
 
   nav {
     display: inline-block;
   }
 
-  .header {
-    padding-left: 14px;
-    padding-right: 14px;
-  }
 
-  .big-news .container {
-    padding: 30px 16px;
-    justify-content: space-between;
-    flex-wrap: nowrap;
+  .big-news {
+    text-align: left;
+    padding: 50px;
     flex-direction: row;
-
-
   }
-
 
   .big-news img {
-    width: 50%;
-    display: inline-block;
-
+    width: 80%;
   }
 
-  .news-card {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-
-    width: 48%;
-
-
-
+  .big-news h2 {
+    font-size: 20px;
+    margin-left: 30px;
   }
-
-  .news-card h3 {
-    font-size: 15px;
-    padding: 0px 5px;
-  }
-
-  .news-card p {
-    font-size: 10px;
-    padding: 0px 5px;
-
-  }
-
-
-
-  .footer {
-    padding-left: 36px;
-    padding-right: 36px;
-  }
-
-
 }
-
-
-
 
 @media (min-width: 1024px) {
   .header {
-    justify-content: center;
+    height: 150px;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 20px;
   }
 
-  .big-news .container {
-    display: flex;
-    flex-direction: row;
-    align-items: left;
-  }
-
-  .big-news img {
+  .header img {
     width: 50%;
-    display: inline-block;
   }
 
-  .big-news div {
-    padding: 80px 30px;
-    text-align: left;
-  }
+  .nav {}
 
-  .news-grid {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
 
-  .news-card .container {
-    display: flex;
-    flex-direction: row;
+
+
+  .big-news {
+    width: 100%;
+    flex-direction: column;
     align-items: center;
-  }
-
-  .news-card a {
-    width: 25%;
-    flex-grow: 1;
-
-  }
-
-  .news-card img {
-    width: 20%;
   }
 }
