--- a/code/style.css
+++ b/code/style.css
@@ -172,6 +172,7 @@ nav a {
 
   .news-card {
     width: 50%;
+    justify-content: left;
   }
 
   .news-card img {
@@ -203,12 +204,17 @@ nav a {
 
 
 
-
-
-
   .big-news {
     width: 100%;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
+  }
+
+  .smaller-news {}
+
+  .news-card {
+    width: 30%;
+    justify-content: left;
   }
 }
