--- a/code/style.css
+++ b/code/style.css
@@ -121,7 +121,7 @@ text-align: left;
 width: 45%;
 margin-left: 10px;
 height: auto;
-max-height: 350px;
+max-height: 210px;
 }
 
 .food-phone h2  {
@@ -361,6 +361,14 @@ input #send {
   .hamburger {
     display: none;
   }
+
+
+
+  .food-phone img {
+    
+    height: auto;
+    max-height: 350px;
+    }
 
   .big-news h2 {
     margin-bottom: 20px;
