--- a/code/style.css
+++ b/code/style.css
@@ -72,6 +72,7 @@ p {
 
 .header-logo {
   width: 30%; 
+  border-radius: 50%;
  }
 
 .container {
@@ -157,7 +158,7 @@ p {
   order:1;
 }
 
-.part-2 {
+.ipad-view {
   order:2;
 }
 
