--- a/code/style.css
+++ b/code/style.css
@@ -1,15 +1,10 @@
-/* colors:
-#dff5f2;
-#87dfd6;
-##46b7b9;
-#2f9296
-*/
+
 *{
   margin: 0; padding: 0; box-sizing: border-box;
 }
 .wrapper {
   display: grid;
-  background: rgb(176, 233, 176);
+  background: #dff5f2;;
   grid-gap: 20px;
   align-items: center;
   justify-items: center;
@@ -59,7 +54,7 @@
 .card img {
   width: 160px;
   height: 160px;
-  padding: 7px;
+  padding: 4px;
 }
 .cardtxt {
   margin-left: 15px;
@@ -82,6 +77,7 @@
   padding: 7px;
   display: none;
   margin-left: 7px;
+  margin: 30px;
 }
 
 
