--- a/code/style.css
+++ b/code/style.css
@@ -105,8 +105,12 @@
   
 }
 .bignewstxt{
-  display: flex;
-  align-items: center;
+  position: absolute;
+  top: 300px;
+  background: rgb(255, 228, 196, 0.5);
+  border-radius: 50%;
+  box-shadow: 1px 1px 80px 1px;
+  padding: 30px;
 }
 .cards{
 display: grid;
