--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,6 @@
 body {
-  background: #ffabc2;
-  color: #2756c8;
+  background: #ffc2c2;
+  color: #010a43;
   margin: 0;
   font-family: "Raleway", sans-serif;
 }
@@ -15,13 +15,13 @@ h1 {
 h2 {
   font-size: 3.5vw;
   font-family: "Major Mono Display", monospace;
-  color: #0484e8;
+  color: #010a43;
   margin: 0 0 20px 0;
 }
 
 h3 {
   font-size: 3.5vw;
-  color: #6dc9f7;
+  color: #122288;
   font-family: "Major Mono Display", monospace;
   margin: 20px 0 10px 0;
   text-align: center;
@@ -58,7 +58,7 @@ header {
   width: 20px;
   height: 4px;
   border-radius: 3px;
-  background: #2756c8;
+  background: #010a43;
 }
 
 header img {
@@ -78,7 +78,7 @@ nav h1 {
 
 nav a {
   text-decoration: none;
-  color: #2756c8;
+  color: #010a43;
   white-space: normal;
 }
 a {
@@ -93,6 +93,7 @@ a {
 .center-news-containers {
   display: flex;
   flex-direction: column;
+  padding: 0 20px;
 }
 
 /*** BIG NEWS CONTAINER ***/
@@ -102,7 +103,6 @@ a {
   display: flex;
   flex-direction: column;
   margin: 25px auto;
-  width: 90%;
   box-shadow: 5px 10px #ad7c59;
 }
 .big-news-container img {
@@ -112,30 +112,26 @@ a {
 }
 
 /*** SMALL NEWS CONTAINER ***/
-
 .small-news {
   display: flex;
   justify-content: center;
 }
 
 .small-news-container {
-  margin-top: 10px;
-  justify-content: flex-start;
-  margin: 10px auto;
-  width: 95%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 20px;
 }
 
 .small-news-card {
   background: 5px 10px #fce8ce;
   box-shadow: 5px 10px #ad7c59;
-  margin: 20px;
-}
-
-.small-news-card div {
+  margin: 20px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 
 .small-news-card img {
   width: 90%;
@@ -146,7 +142,7 @@ a {
 }
 
 a:hover {
-  color: #6dc9f7;
+  color: #122288;
 }
 
 /*** MEDIA QUERIES ***/
@@ -179,16 +175,17 @@ a:hover {
   }
 
   .small-news-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .small-news-card {
-    width: 43%;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
 @media (min-width: 900px) {
+
+  .center-news-containers {
+    width: 80%;
+    margin: auto;
+  }
+
   header nav {
     justify-content: flex-end;
   }
@@ -266,8 +263,11 @@ a:hover {
     transform: scale(1.04);
   }
 
+  .small-news-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
   .small-news-card {
-    width: 22.6%;
     margin: 10px;
     display: flex;
     justify-content: center;
