--- a/code/style.css
+++ b/code/style.css
@@ -6,35 +6,36 @@ body {
   background: rgb(42,44,49);
   background: linear-gradient(90deg, rgba(42,44,49,1) 0%, rgba(35,40,54,1) 34%, rgba(52,63,94,1) 100%);
   color: whitesmoke;
-  font-family: Open Sans;
+  font-family: 'Open Sans';
   margin: 0 auto;
 }
 
 h1 {
-  font-family: Lato, serif;
+  display: flex;
+  max-width: 200px;
+  font-family: 'Lato', serif;
   font-weight:100;
-  font-size: 58px;
+  font-size: 34px;
   letter-spacing: 0.05em;
   margin: 0;
-  display:inline;
 }
 
-h2{
-  font-family: Lato, sans-serif;
+h2 {
+  font-family: 'Lato', sans-serif;
   font-size: 30px; 
   margin:20px, 20px;
 }
 
 h3 {
-  font-family: Lato, sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 20px;
   margin-top: 10px;
   margin-bottom: 0;
 }
 
 h4 {
-  font-family: Lato, sans-serif;
-  margin: 0 auto;
+  font-family: 'Lato', sans-serif;
+  margin: 0 0 10px 0;
 }
 
 img {
@@ -43,19 +44,19 @@ img {
 
 /* HEADER STYLING */
 
-header{
+header {
   height: 170px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
   text-transform: uppercase;
-  background-color:whitesmoke;
+  background-color: whitesmoke;
   color: rgb(42, 44, 49);
   margin: 0 auto;
 }
 
-.logo{
+.logo {
   width: 100px;
 }
 
@@ -99,7 +100,11 @@ nav a:hover {
 
 .big-news img {
   width: 100%;
+  transition: all .2s ease-in-out; 
 }
+
+.big-news img:hover { transform: scale(1.02); }
+
 
 .big-news p {
   margin-top: -16px;
@@ -125,7 +130,7 @@ nav a:hover {
   border-radius: 12px;
 }
 
-.news-card a{
+.news-card a {
   background: whitesmoke; 
   text-decoration: none;
   color: #000;
@@ -135,7 +140,7 @@ nav a:hover {
   width: 100%;
 }
 
-.news-card a:hover{
+.news-card a:hover {
   opacity: 0.4;
 }
 
@@ -146,10 +151,15 @@ nav a:hover {
 /* FOOTER STYLING */
 
 footer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
   height: 50px;
   font-size: 10px;
   text-align: end;
   padding-right: 20px;
+  padding-bottom: 10px;
 }
 
 footer a{
@@ -169,92 +179,99 @@ footer a{
   
 /* NAV TABLET*/
 
-nav {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
+  nav {
+   width: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+  }
 
- .left-logo {
-   display: none;
- }
+  .left-logo {
+    display: none;
+  }
 
-.hamburger {
-  display: none;
-}
+  .hamburger {
+    display: none;
+  }
 
 /* BIG NEWS TABLET */
 
-.big-news{
-  text-align: left;
-}
+  .big-news{
+    text-align: left;
+  }
 
-.small-news {
-  flex-wrap: wrap;
-  flex-direction: row;
-  margin: 0 auto;
-}
+  .small-news {
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 0 auto;
+  }
 
-.news-card {
-  width: 40%;
-  flex-grow: 1;
-  margin: 12px;
-}
+  .news-card {
+    width: 40%;
+    flex-grow: 1;
+    margin: 12px;
+  }
 }
 
 /* MEDIA QUERY DESKTOP */
 
 @media (min-width: 900px){
 /*NAV DESKTOP */
-h1 {
-  display:inline;
-}
+  h1 {
+    display:inline;
+    font-size: 42px;
+  }
 
-nav {
-  width:50%;
+  nav {
+    width:50%;
+  }
 
-}
+  nav img {
+    display: none;
+  }
 
-nav img {
-  display: none;
-}
+  header {
+    padding:10px;
+    width:100%;
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+  }
 
-header {
-  padding:10px;
-  width:100%;
-  display:flex;
-  justify-content:space-around;
-  align-items:center;
-
-}
-
-.left-logo {
-  display: inline-block;
-}
+  .left-logo {
+    display: inline-block;
+    }
 
 /* BIG NEWS DESKTOP */
 
-.big-news {
-  flex-direction: row;
-  align-items: center;
-  max-width: 1100px;
-  margin: 0 auto;
+  .big-news {
+    flex-direction: row;
+    align-items: center;
+    max-width: 1100px;
+    margin: 0 auto;
+  }
+
+  .big-news img {
+    width: 50%;
+  }
+
+  .big-news div {
+    text-align:center;
+    padding-left:30px;
+    width:50%;
+  }
+
+  .news-card {
+    width:18%;
+    flex-grow: 1;
+    margin:12px;
+  }
 }
 
-.big-news img {
-  width: 50%;
-}
-
-.big-news div {
-  text-align:center;
-  padding-left:30px;
-  width:50%;
-}
-
-.news-card {
-  width:18%;
-  flex-grow: 1;
-  margin:12px;
-}
+@media (min-width: 1100px){
+  h1 {
+    display:inline;
+    font-size: 54px;
+    max-width: 100%;
+  }
 }
