--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,174 @@
-html {
-  background: #0025ff;
-  color: #fff;
+
+
+body {
+  background-color: whitesmoke;
+
 }
+
+h1 { 
+  margin-top: 0px;
+  text-shadow: 2px 2px white;
+
+}
+
+
+.navbar {
+  padding: 15px;
+  background-color:   #F8ECEC;
+  box-shadow: 0px 1px 5px #F8ECEC(190, 190, 190, 0.46);
+ -webkit-box-shadow: 0px 1px 5px #F8ECEC(190, 190, 190, 0.46);
+ -moz-box-shadow: 0px 1px 5px #F8ECEC(190, 190, 190, 0.46);
+ overflow: hidden;
+}
+
+
+/* change to flex-box */
+.navbar a {
+  display: inline-block;
+ color: black; 
+  padding: 15px;
+ text-decoration: none;
+ font-size: 15px;
+ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+.navbar a:hover {
+  color:white;
+}
+
+.header {  
+  justify-content: center;
+  text-align: center;
+  height: 60vh;
+  background-color:#F7E6E6;
+  font-size: xx-large;
+  padding-top: 250px;
+
+
+}
+
+
+.placeholder  {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  
+
+}
+
+
+.quote-container {
+  display: flex;
+  justify-content: center;
+  padding-top: 200px;
+}
+
+.quote {
+  justify-content: space-around;
+  padding: 40px;
+  height: 200px;
+  width: 1200px;
+  color: pink;
+
+}
+
+#quote {
+  display: flex;
+  justify-content: center;
+}
+
+
+
+.new-quote {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: xx-large;
+
+}
+
+.large-news-container {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 200px;
+  padding-bottom: 300px;
+
+
+}
+
+
+.large-news {
+  background-color: #F8ECEC;
+  border-style: groove;
+  border-radius: 8px;
+  box-shadow: 3px 5px  white;
+  padding: 30px;
+  font-size: large;
+  height: 400px;
+  width: 1200px;
+  
+
+
+}
+
+
+
+section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  
+ 
+
+}
+
+
+.small-news {
+  flex: 1 1 150px;
+  flex: 0 1 150px;
+  margin: 40px;
+  padding: 100px;
+ 
+  background-color: #F8ECEC;
+  border-color:  #F8ECEC;
+  border-style: groove;
+  border-radius: 8px;
+  box-shadow: 3px 5px  white;
+
+}
+
+.revolution-container {
+  display: flex;
+  flex-wrap: wrap;
+  
+
+}
+
+.revolution {
+  justify-content: space-between;
+  padding: 20px;
+  margin: 20px;
+  margin-left: 100px;
+
+}
+
+
+.footer {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-color: #F8ECEC;
+  width: 100%;
+  margin-top: 50px;
+  height: 300px;
+  line-height: 90px;
+}
+
+
+.footertext {
+  color:black;
+  font-size: 15px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+
+
