--- a/code/style.css
+++ b/code/style.css
@@ -94,6 +94,17 @@ h3 {
 
 }
 
+@media screen and (max-width: 600px) {
+  .large-news-container {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .large-news-container {
+    flex-direction: column;;
+  }
+}
 
 .large-news-container {
   display: flex;
@@ -119,7 +130,6 @@ h3 {
 }
 
 
-
 section {
   display: flex;
   flex-wrap: wrap;
@@ -127,22 +137,16 @@ section {
 }
 
 
-section .img {
-  display: flex;
-  align-items: center;
-
-
-}
 
  
 
 .small-news {
   flex: 1 1 150px;
   flex: 0 1 150px;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 150px;
   margin: 40px;
-  padding: 100px;
+  padding: 50px;
   background-color: #F8ECEC;
   border-color: #F7E6E6;
   border-radius: 5px;
